--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
-    <form action="https://thebestwaytogetr.blogspot.com/" method="POST">
+    <form action="https://thebestwaytogetr.blogspot.com" >
       <div
         class="g-recaptcha"
         data-sitekey="6LdqbpkjAAAAABSiT9kfUi8uzgKQuOuWBdOfqm4J"
